--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.10",
     "react": "^18",
