--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@vercel/speed-insights": "^1.0.12",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
