--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@graphcms/rich-text-react-renderer": "^0.6.2",
     "@vercel/speed-insights": "^1.0.12",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
