--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@graphcms/rich-text-react-renderer": "^0.6.2",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
